--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
-h1{
-    color: red;
+*{
+    padding: 0;
+    margin: 0;
+}
+
+.app-container{
+     width: 100%;
+     height: 100%;
+}
+
+.centered{
+    margin: auto;
+    padding: 20px;
+}
+
+.main-section{
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.app-list{
+    text-align: center;
+    list-style: none;
+}
+
+.daily-list{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin: auto;
+}
+
+.daily-list ul{
+    width: 30%;
+}
+
+.daily-list  img{
+    height: 15px;
+    width: 15px;
+    margin-left: 10px;
 }
