--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@
 
 .centered{
     margin: auto;
-    padding: 20px;
+    padding: 0 10%;
 }
 
 .main-section{
+    padding-top: 10%;
     text-align: center;
-    margin-bottom: 35px;
+    margin-bottom: 10%;
 }
 
 .app-list{
@@ -28,6 +29,8 @@
     flex-direction: row;
     align-items: baseline;
     margin: auto;
+    justify-content: center;
+    width: 300px;
 }
 
 .daily-list ul{
