--- a/style.css
+++ b/style.css
@@ -19,11 +19,6 @@
     margin-bottom: 10%;
 }
 
-.app-list{
-    text-align: center;
-    list-style: none;
-}
-
 .img_list {
     height: 15px;
     width: 15px;
@@ -40,4 +35,12 @@
 
 .test {
     width: 1px !important;
+}
+
+.background_card {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);,0,0,0);
+    background-color: red;
+    border-radius: 15px;
+    opacity: 0.5;
 }
