--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@
 .background_card {
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);,0,0,0);
-    background-color: red;
+    background-color: rgba(45, 161, 252, 0.5);
     border-radius: 15px;
-    opacity: 0.5;
 }
