--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     margin: 0;
 }
 
+body {
+    background-image: url("/images/cloudy-background.jpg");
+    background-color: #cccccc;
+    color: white;
+}
+
 .app-container{
      width: 100%;
      height: 100%;
@@ -39,7 +45,7 @@
 
 .background_card {
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);,0,0,0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     background-color: rgba(45, 161, 252, 0.5);
     border-radius: 15px;
 }
