--- a/style.css
+++ b/style.css
@@ -39,7 +39,20 @@
 
 .background_card {
     -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
-    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);,0,0,0);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     background-color: rgba(45, 161, 252, 0.5);
     border-radius: 15px;
 }
+
+
+.hover-style:hover{
+    background-color: rgba(30, 113, 173, 0.5);
+    border-radius: 10px;
+}
+
+
+.onFocus{
+    background-color: rgba(30, 113, 173, 0.5);
+    border-radius: 10px;
+}
+
