Test background color

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     background-image: url("images/cloudy-background.jpg");
-    background-color: #cccccc;
+    background-color: #4795e5;
     color: white;
 }
 
